# gongbus

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hidong/gongbus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hidong/gongbus/: MainActivity.kt
app/src/main/java/com/hidong/gongbus/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/hidong/gongbus/: ExampleUnitTest.kt
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
init-db/: 01_init.sql  02_fix_avg_values.sql
